[package]
authors = ["kizkoh"]
name = "rustytwit"
version = "0.0.1"

[dependencies]
chrono = "0.2.25"
curl = "0.2"
egg-mode = "0.6.0"
env_logger = "*"
gdk-pixbuf = "0.1.0"
gdk-pixbuf-sys = "0.3.1"
getopts = "*"
glib = "0.1.0"
gtk-sys = "0.3.1"
libc = "0.2.11"
log = "0.3.6"
regex = "0.1.80"
rust-crypto = "0.2"
rustc-serialize = "0.3.19"
time = "0.1"
toml = "0.1.30"

[dependencies.gtk]
features = ["v3_16"]
version = "0.1.0"
