[package]
authors = ["kizkoh"]
name = "stream-notification"
version = "0.1.0"

[dependencies]
chrono = "0.2.25"
hyper = "0.9.14"
notify-rust = "3.2.1"
rand = "0.3.15"
rustc-serialize = "0.3.22"
unicode-width = "0.1.4"
url = "1.2.4"

[dependencies.egg-mode]
git = "https://github.com/kizkoh/twitter-rs.git"
optional = false
